--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8"/>
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no"/>
   <title>Filter only images taken in rigth direction</title>
-  <link rel="stylesheet" type="text/css" href="css/index.css"/>
-  <link rel="stylesheet" href="https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.css"/>
+  <link rel="stylesheet" type="text/css" href="./css/index.css"/>
+  <link rel="stylesheet" href="./bower_components/mapbox.js/mapbox.css"/>
 </head>
 
 <body>
   <div id="map"></div>
 </body>
 
-<script src="https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.js"></script>
-<script src="js/index.js"></script>
+<script src="./bower_components/mapbox.js/mapbox.js"></script>
+<script src="./js/index.js"></script>
 
 </html>
