Added some API data

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <div id="map"></div>
 </body>
 
+<script src="./bower_components/jquery/dist/jquery.min.js"></script>
 <script src="./bower_components/mapbox.js/mapbox.js"></script>
 <script src="./js/index.js"></script>
 
