Added real data and arrow
The arrows peek in the azimuth direction

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Filter only images taken in rigth direction</title>
   <link rel="stylesheet" type="text/css" href="./css/index.css"/>
   <link rel="stylesheet" href="./bower_components/mapbox.js/mapbox.css"/>
+  <link rel="stylesheet" href="./bower_components/font-awesome/css/font-awesome.min.css"/>
 </head>
 
 <body>
@@ -14,6 +15,7 @@
 
 <script src="./bower_components/jquery/dist/jquery.min.js"></script>
 <script src="./bower_components/mapbox.js/mapbox.js"></script>
+<script src="./js/leaflet.rotatedMarker.js"></script>
 <script src="./js/index.js"></script>
 
 </html>
