--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
   <div id="map"></div>
+  <ul id="image-container"></ul>
 </body>
 
 <script src="./bower_components/jquery/dist/jquery.min.js"></script>
